[gd_scene load_steps=9 format=2]

[ext_resource path="res://elements/scripts/CamScript.gd" type="Script" id=1]
[ext_resource path="res://elements/scripts/MainScript.gd" type="Script" id=2]
[ext_resource path="res://elements/objects/GameNodes/paths/RightPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/objects/GameNodes/invaders/Spawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://elements/VT323-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://elements/objects/GameNodes/ObjectPlace.tscn" type="PackedScene" id=6]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="DungeonTest" type="Node2D" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="DungeonTest"]
modulate = Color( 0.352941, 0.254902, 0.137255, 1 )
position = Vector2( 356, -17 )
scale = Vector2( 1736, 604 )
mesh = SubResource( 1 )

[node name="Spawner" parent="DungeonTest" instance=ExtResource( 4 )]
position = Vector2( -658, -3 )

[node name="Right" parent="DungeonTest" instance=ExtResource( 3 )]
position = Vector2( 359.25, -4 )
scale = Vector2( 1671.5, 50 )

[node name="Node2D" type="Node2D" parent="."]
visible = false

[node name="spawn" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( -339, -158 )

[node name="spawn2" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( -20, -158 )

[node name="spawn3" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( -337, 165 )

[node name="spawn4" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( -26, 166 )

[node name="spawn5" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 261, -159 )

[node name="spawn6" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 263, 162 )

[node name="spawn7" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 578, 158 )

[node name="spawn8" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 841, 153 )

[node name="spawn9" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 1128, 151 )

[node name="spawn12" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 1130, -165 )

[node name="spawn11" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 838, -169 )

[node name="spawn10" parent="Node2D" instance=ExtResource( 6 )]
position = Vector2( 575, -166 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="Camera2D"]

[node name="Button" type="Button" parent="Camera2D/Node2D"]
margin_left = -513.0
margin_top = 224.0
margin_right = -393.0
margin_bottom = 285.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Zombie"

[node name="Button2" type="Button" parent="Camera2D/Node2D"]
margin_left = -388.0
margin_top = 224.0
margin_right = -268.0
margin_bottom = 285.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Goblin"

[node name="Button3" type="Button" parent="Camera2D/Node2D"]
margin_left = -265.0
margin_top = 224.0
margin_right = -145.0
margin_bottom = 285.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Slime"

[node name="Button4" type="Button" parent="Camera2D/Node2D"]
margin_left = -140.0
margin_top = 223.0
margin_bottom = 284.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Skeleton"

[node name="Button5" type="Button" parent="Camera2D/Node2D"]
margin_left = 5.0
margin_top = 222.0
margin_right = 125.0
margin_bottom = 283.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Rat"

[node name="Button6" type="Button" parent="Camera2D/Node2D"]
margin_left = -514.0
margin_top = -300.0
margin_right = -342.0
margin_bottom = -239.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Start wave"
